# receipt

./: .editorconfig  .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 64e79278440a_initial_schema.py
backend/app/: main.py
backend/app/api/routers/: categories.py  receipts.py  stats.py
backend/app/core/: config.py
backend/app/models/: __init__.py  category.py  receipt.py
backend/app/ocr/: base.py  factory.py  null_provider.py  upstage_provider.py
backend/app/schemas/: category.py  receipt.py  stats.py
backend/app/services/: __init__.py  receipt_service.py  stats_service.py
backend/tests/: conftest.py  test_receipts.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/categories/: page.tsx
frontend/app/receipts/: page.tsx
frontend/app/receipts/[id]/: page.tsx
frontend/app/receipts/new/: page.tsx
frontend/app/stats/: page.tsx
frontend/components/: CategorySelect.tsx  ReceiptDeleteButton.tsx  ReceiptForm.tsx  ReceiptList.tsx  StatsChart.tsx
frontend/lib/: format.ts
frontend/lib/api/: categories.ts  client.ts  receipts.ts  stats.ts
frontend/types/: receipt.ts  stats.ts
